[package]
name = "supersolid"
version = "0.1.0"
authors = ["post-rex <post-rex@pm.me>"]
edition = "2018"

[dependencies]
html5ever = "0.25"
markup5ever_rcdom = "0.1"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
string_cache = "0.8"
regex = "1.4"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"
tracing = "0.1"
tracing-subscriber = "0.2"
path-clean = "0.1"